--- a/js/happiness_report_choropleth_map.vg.json
+++ b/js/happiness_report_choropleth_map.vg.json
@@ -5,7 +5,7 @@
     "title": "World Happiness Report 2019",
     "projection": {"type": "equalEarth"},
     "data": {
-        "url": "https://raw.githubusercontent.com/ehoo0018/FIT3179/main/Data%20Visualisation%202/ne_110m.json",
+        "url": "https://raw.githubusercontent.com/ehoo0018/HomeworkWeek9/main/js/ne_110m.json",
         "format": {"type": "topojson", "feature": "ne_110m_admin_0_countries"}
     },
     
@@ -14,7 +14,7 @@
             "lookup": "properties.NAME",
             "from": {
                 "data": {
-                    "url": "https://raw.githubusercontent.com/ehoo0018/FIT3179/main/Homework%20W9/data/happy.csv"
+                    "url": "https://raw.githubusercontent.com/ehoo0018/HomeworkWeek9/main/data/happy.csv"
                 },
                 "key": "Country or region",
                 "fields": ["Score", "Social support", "Healthy life expectancy", "Generosity"]
